// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | Input / Radio Default Story 1`] = `
.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: auto;
  display: inline-block;
}

.c7 {
  width: 20px;
  height: 20px;
  border: 1px solid #BCBCB6;
  position: relative;
  border-radius: 50%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c7::before,
.c7::after {
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 50%;
  border-radius: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c7::before {
  width: 100%;
  height: 100%;
  padding: 2px;
}

.c7::after {
  width: 12px;
  height: 12px;
}

.c1 {
  position: relative;
}

.c1:hover .c6 {
  border-color: #4B4B46;
}

.c5 {
  position: absolute;
  opacity: 0;
  height: 0;
  width: 0;
  cursor: pointer;
}

.c5:checked + .c6::after {
  background: #0046FF;
}

.c5[disabled] + .c6 {
  border-color: #EBEBE8;
}

.c5:checked[disabled] + .c6 {
  border-color: #EBEBE8;
}

.c5:checked[disabled] + .c6::after {
  background: #EBEBE8;
}

.c5:focus + .c6::before {
  border: 1px solid #0046FF;
}

.c8 {
  padding-left: 8px;
  white-space: initial;
}

<div
  className="c0"
  width="auto"
>
  <label
    className="c1 c2"
    hidden={false}
  >
    <span
      className="c3"
    >
      <div
        className="c4"
      >
        <input
          className="c5"
          name="example"
          type="radio"
          value="green"
        />
        <div
          className="c6 c7"
        />
        <span
          className="c8 c9"
        >
          Green
        </span>
      </div>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules | Input / Radio Disabled Story 1`] = `
Array [
  .c0 {
  margin-bottom: 16px;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 24px;
  line-height: 1.1666666666666667;
}

@media (min-width:760px) {
  .c1 {
    font-size: 28px;
    line-height: 1.1428571428571428;
  }
}

<div
    className="c0"
  >
    <span
      className="c1"
    >
      Disabled
    </span>
  </div>,
  .c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c12 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #A0A09B;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  width: auto;
  display: inline-block;
}

.c10 {
  width: 20px;
  height: 20px;
  border: 1px solid #BCBCB6;
  position: relative;
  border-radius: 50%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c10::before,
.c10::after {
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 50%;
  border-radius: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c10::before {
  width: 100%;
  height: 100%;
  padding: 2px;
}

.c10::after {
  width: 12px;
  height: 12px;
}

.c4 {
  position: relative;
}

.c4:hover .c9 {
  border-color: #4B4B46;
}

.c8 {
  position: absolute;
  opacity: 0;
  height: 0;
  width: 0;
  cursor: pointer;
}

.c8:checked + .c9::after {
  background: #0046FF;
}

.c8[disabled] + .c9 {
  border-color: #EBEBE8;
}

.c8:checked[disabled] + .c9 {
  border-color: #EBEBE8;
}

.c8:checked[disabled] + .c9::after {
  background: #EBEBE8;
}

.c8:focus + .c9::before {
  border: 1px solid #0046FF;
}

.c13:checked + .c9::after {
  background: #0046FF;
}

.c13[disabled] + .c9 {
  border-color: #EBEBE8;
}

.c13:checked[disabled] + .c9 {
  border-color: #EBEBE8;
}

.c13:checked[disabled] + .c9::after {
  background: #EBEBE8;
}

.c13 + .c9::before {
  border: 1px solid #FF1900;
}

.c13:focus + .c9::before {
  border: 1px solid #0046FF;
}

.c11 {
  padding-left: 8px;
  white-space: initial;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
    className="c0"
    direction="column"
  >
    <div
      className="c1"
      direction="row"
    >
      <div
        className="c2"
      >
        Checked
      </div>
      <div>
        <div
          className="c3"
          width="auto"
        >
          <label
            className="c4 c5"
            hidden={false}
          >
            <span
              className="c6"
            >
              <div
                className="c7"
              >
                <input
                  className="c8"
                  defaultChecked={true}
                  disabled={true}
                  name="example"
                  type="radio"
                  value="green"
                />
                <div
                  className="c9 c10"
                />
                <span
                  className="c11 c12"
                >
                  Green
                </span>
              </div>
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      className="c1"
      direction="row"
    >
      <div
        className="c2"
      >
        Not Checked
      </div>
      <div>
        <div
          className="c3"
          width="auto"
        >
          <label
            className="c4 c5"
            hidden={false}
          >
            <span
              className="c6"
            >
              <div
                className="c7"
              >
                <input
                  className="c8"
                  disabled={true}
                  name="example"
                  type="radio"
                  value="blue"
                />
                <div
                  className="c9 c10"
                />
                <span
                  className="c11 c12"
                >
                  Blue
                </span>
              </div>
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>,
  .c0 {
  margin-bottom: 32px;
}

<div
    className="c0"
  />,
]
`;

exports[`Storyshots Molecules | Input / Radio In A Group 1`] = `
.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -10px;
  margin-right: -10px;
}

.c5 > * {
  padding-left: 10px;
  padding-right: 10px;
}

.c5 > *:not(:first-child) {
  padding-top: 0;
}

.c8 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c3 {
  box-sizing: border-box;
  color: inherit;
  display: table;
  max-width: 100%;
  padding: 0;
  white-space: normal;
  cursor: auto;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c13 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  padding: 0;
  margin: 0;
  border: 0;
}

.c6 {
  width: auto;
  display: inline-block;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c11 {
  width: 20px;
  height: 20px;
  border: 1px solid #BCBCB6;
  position: relative;
  border-radius: 50%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c11::before,
.c11::after {
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 50%;
  border-radius: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c11::before {
  width: 100%;
  height: 100%;
  padding: 2px;
}

.c11::after {
  width: 12px;
  height: 12px;
}

.c7 {
  position: relative;
}

.c7:hover .c10 {
  border-color: #4B4B46;
}

.c9 {
  position: absolute;
  opacity: 0;
  height: 0;
  width: 0;
  cursor: pointer;
}

.c9:checked + .c10::after {
  background: #0046FF;
}

.c9[disabled] + .c10 {
  border-color: #EBEBE8;
}

.c9:checked[disabled] + .c10 {
  border-color: #EBEBE8;
}

.c9:checked[disabled] + .c10::after {
  background: #EBEBE8;
}

.c9:focus + .c10::before {
  border: 1px solid #0046FF;
}

.c14:checked + .c10::after {
  background: #0046FF;
}

.c14[disabled] + .c10 {
  border-color: #EBEBE8;
}

.c14:checked[disabled] + .c10 {
  border-color: #EBEBE8;
}

.c14:checked[disabled] + .c10::after {
  background: #EBEBE8;
}

.c14 + .c10::before {
  border: 1px solid #FF1900;
}

.c14:focus + .c10::before {
  border: 1px solid #0046FF;
}

.c12 {
  padding-left: 8px;
  white-space: initial;
}

<div
  className="c0"
>
  <fieldset
    className="c1"
  >
    <legend
      className="c2 c3"
      hidden={false}
    >
      <span
        className="c4"
      >
        Colors 
      </span>
    </legend>
    <div
      className="c5"
    >
      <div
        className="c6"
        width="auto"
      >
        <label
          className="c7 c2"
          hidden={false}
        >
          <span
            className="c4"
          >
            <div
              className="c8"
            >
              <input
                className="c9"
                name="example"
                type="radio"
                value="green"
              />
              <div
                className="c10 c11"
              />
              <span
                className="c12 c13"
              >
                Green
              </span>
            </div>
          </span>
        </label>
      </div>
      <div
        className="c6"
        width="auto"
      >
        <label
          className="c7 c2"
          hidden={false}
        >
          <span
            className="c4"
          >
            <div
              className="c8"
            >
              <input
                className="c9"
                name="example"
                type="radio"
                value="blue"
              />
              <div
                className="c10 c11"
              />
              <span
                className="c12 c13"
              >
                Blue
              </span>
            </div>
          </span>
        </label>
      </div>
      <div
        className="c6"
        width="auto"
      >
        <label
          className="c7 c2"
          hidden={false}
        >
          <span
            className="c4"
          >
            <div
              className="c8"
            >
              <input
                className="c9"
                name="example"
                type="radio"
                value="yellow"
              />
              <div
                className="c10 c11"
              />
              <span
                className="c12 c13"
              >
                Yellow
              </span>
            </div>
          </span>
        </label>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots Molecules | Input / Radio In A Group With Error 1`] = `
.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -10px;
  margin-right: -10px;
}

.c5 > * {
  padding-left: 10px;
  padding-right: 10px;
}

.c5 > *:not(:first-child) {
  padding-top: 0;
}

.c8 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c15 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c2 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c3 {
  box-sizing: border-box;
  color: inherit;
  display: table;
  max-width: 100%;
  padding: 0;
  white-space: normal;
  cursor: auto;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c13 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c14 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FF1900;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c1 {
  padding: 0;
  margin: 0;
  border: 0;
}

.c6 {
  width: auto;
  display: inline-block;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c11 {
  width: 20px;
  height: 20px;
  border: 1px solid #BCBCB6;
  position: relative;
  border-radius: 50%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c11::before,
.c11::after {
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 50%;
  border-radius: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c11::before {
  width: 100%;
  height: 100%;
  padding: 2px;
}

.c11::after {
  width: 12px;
  height: 12px;
}

.c7 {
  position: relative;
}

.c7:hover .c10 {
  border-color: #4B4B46;
}

.c16:checked + .c10::after {
  background: #0046FF;
}

.c16[disabled] + .c10 {
  border-color: #EBEBE8;
}

.c16:checked[disabled] + .c10 {
  border-color: #EBEBE8;
}

.c16:checked[disabled] + .c10::after {
  background: #EBEBE8;
}

.c16:focus + .c10::before {
  border: 1px solid #0046FF;
}

.c9 {
  position: absolute;
  opacity: 0;
  height: 0;
  width: 0;
  cursor: pointer;
}

.c9:checked + .c10::after {
  background: #0046FF;
}

.c9[disabled] + .c10 {
  border-color: #EBEBE8;
}

.c9:checked[disabled] + .c10 {
  border-color: #EBEBE8;
}

.c9:checked[disabled] + .c10::after {
  background: #EBEBE8;
}

.c9 + .c10::before {
  border: 1px solid #FF1900;
}

.c9:focus + .c10::before {
  border: 1px solid #0046FF;
}

.c12 {
  padding-left: 8px;
  white-space: initial;
}

<div
  className="c0"
>
  <fieldset
    className="c1"
  >
    <legend
      className="c2 c3"
      hidden={false}
    >
      <span
        className="c4"
      >
        Colors 
      </span>
    </legend>
    <div
      className="c5"
    >
      <div
        className="c6"
        width="auto"
      >
        <label
          className="c7 c2"
          hidden={false}
        >
          <span
            className="c4"
          >
            <div
              className="c8"
            >
              <input
                className="c9"
                name="example"
                onChange={[Function]}
                required={true}
                type="radio"
                value="green"
              />
              <div
                className="c10 c11"
              />
              <span
                className="c12 c13"
              >
                Green
              </span>
            </div>
          </span>
        </label>
      </div>
      <div
        className="c6"
        width="auto"
      >
        <label
          className="c7 c2"
          hidden={false}
        >
          <span
            className="c4"
          >
            <div
              className="c8"
            >
              <input
                className="c9"
                name="example"
                onChange={[Function]}
                required={true}
                type="radio"
                value="blue"
              />
              <div
                className="c10 c11"
              />
              <span
                className="c12 c13"
              >
                Blue
              </span>
            </div>
          </span>
        </label>
      </div>
      <div
        className="c6"
        width="auto"
      >
        <label
          className="c7 c2"
          hidden={false}
        >
          <span
            className="c4"
          >
            <div
              className="c8"
            >
              <input
                className="c9"
                name="example"
                onChange={[Function]}
                required={true}
                type="radio"
                value="yellow"
              />
              <div
                className="c10 c11"
              />
              <span
                className="c12 c13"
              >
                Yellow
              </span>
            </div>
          </span>
        </label>
      </div>
    </div>
  </fieldset>
  <div>
    <span
      className="c14"
    >
      <div
        className="c15"
      >
        Error: 
      </div>
      This field is required
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules | Input / Radio Required Story 1`] = `
Array [
  .c0 {
  margin-bottom: 16px;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 24px;
  line-height: 1.1666666666666667;
}

@media (min-width:760px) {
  .c1 {
    font-size: 28px;
    line-height: 1.1428571428571428;
  }
}

<div
    className="c0"
  >
    <span
      className="c1"
    >
      Required
    </span>
  </div>,
  .c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c12 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  width: auto;
  display: inline-block;
}

.c10 {
  width: 20px;
  height: 20px;
  border: 1px solid #BCBCB6;
  position: relative;
  border-radius: 50%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c10::before,
.c10::after {
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 50%;
  border-radius: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c10::before {
  width: 100%;
  height: 100%;
  padding: 2px;
}

.c10::after {
  width: 12px;
  height: 12px;
}

.c4 {
  position: relative;
}

.c4:hover .c9 {
  border-color: #4B4B46;
}

.c8 {
  position: absolute;
  opacity: 0;
  height: 0;
  width: 0;
  cursor: pointer;
}

.c8:checked + .c9::after {
  background: #0046FF;
}

.c8[disabled] + .c9 {
  border-color: #EBEBE8;
}

.c8:checked[disabled] + .c9 {
  border-color: #EBEBE8;
}

.c8:checked[disabled] + .c9::after {
  background: #EBEBE8;
}

.c8:focus + .c9::before {
  border: 1px solid #0046FF;
}

.c11 {
  padding-left: 8px;
  white-space: initial;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
    className="c0"
    direction="column"
  >
    <div
      className="c1"
      direction="row"
    >
      <div
        className="c2"
      >
        Default (without star)
      </div>
      <div>
        <div
          className="c3"
          width="auto"
        >
          <label
            className="c4 c5"
            hidden={false}
          >
            <span
              className="c6"
            >
              <div
                className="c7"
              >
                <input
                  className="c8"
                  name="example"
                  required={true}
                  type="radio"
                  value="green"
                />
                <div
                  className="c9 c10"
                />
                <span
                  className="c11 c12"
                >
                  Green
                </span>
              </div>
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      className="c1"
      direction="row"
    >
      <div
        className="c2"
      >
        With star
      </div>
      <div>
        <div
          className="c3"
          width="auto"
        >
          <label
            className="c4 c5"
            hidden={false}
          >
            <span
              className="c6"
            >
              <div
                className="c7"
              >
                <input
                  className="c8"
                  name="example"
                  required={true}
                  type="radio"
                  value="green"
                />
                <div
                  className="c9 c10"
                />
                <span
                  className="c11 c12"
                >
                  Green *
                </span>
              </div>
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>,
  .c0 {
  margin-bottom: 32px;
}

<div
    className="c0"
  />,
]
`;

exports[`Storyshots Molecules | Input / Radio With All Actions 1`] = `
.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: auto;
  display: inline-block;
}

.c7 {
  width: 20px;
  height: 20px;
  border: 1px solid #BCBCB6;
  position: relative;
  border-radius: 50%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c7::before,
.c7::after {
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 50%;
  border-radius: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c7::before {
  width: 100%;
  height: 100%;
  padding: 2px;
}

.c7::after {
  width: 12px;
  height: 12px;
}

.c1 {
  position: relative;
}

.c1:hover .c6 {
  border-color: #4B4B46;
}

.c5 {
  position: absolute;
  opacity: 0;
  height: 0;
  width: 0;
  cursor: pointer;
}

.c5:checked + .c6::after {
  background: #0046FF;
}

.c5[disabled] + .c6 {
  border-color: #EBEBE8;
}

.c5:checked[disabled] + .c6 {
  border-color: #EBEBE8;
}

.c5:checked[disabled] + .c6::after {
  background: #EBEBE8;
}

.c5:focus + .c6::before {
  border: 1px solid #0046FF;
}

.c10:checked + .c6::after {
  background: #0046FF;
}

.c10[disabled] + .c6 {
  border-color: #EBEBE8;
}

.c10:checked[disabled] + .c6 {
  border-color: #EBEBE8;
}

.c10:checked[disabled] + .c6::after {
  background: #EBEBE8;
}

.c10 + .c6::before {
  border: 1px solid #FF1900;
}

.c10:focus + .c6::before {
  border: 1px solid #0046FF;
}

.c8 {
  padding-left: 8px;
  white-space: initial;
}

<div
  className="c0"
  width="auto"
>
  <label
    className="c1 c2"
    hidden={false}
  >
    <span
      className="c3"
    >
      <div
        className="c4"
      >
        <input
          className="c5"
          name="example6"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          type="radio"
          value="green"
        />
        <div
          className="c6 c7"
        />
        <span
          className="c8 c9"
        >
          Green
        </span>
      </div>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules | Input / Radio With An Error If Not Checked 1`] = `
.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c2 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FF1900;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c0 {
  width: auto;
  display: inline-block;
}

.c7 {
  width: 20px;
  height: 20px;
  border: 1px solid #BCBCB6;
  position: relative;
  border-radius: 50%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c7::before,
.c7::after {
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 50%;
  border-radius: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c7::before {
  width: 100%;
  height: 100%;
  padding: 2px;
}

.c7::after {
  width: 12px;
  height: 12px;
}

.c1 {
  position: relative;
}

.c1:hover .c6 {
  border-color: #4B4B46;
}

.c12:checked + .c6::after {
  background: #0046FF;
}

.c12[disabled] + .c6 {
  border-color: #EBEBE8;
}

.c12:checked[disabled] + .c6 {
  border-color: #EBEBE8;
}

.c12:checked[disabled] + .c6::after {
  background: #EBEBE8;
}

.c12:focus + .c6::before {
  border: 1px solid #0046FF;
}

.c5 {
  position: absolute;
  opacity: 0;
  height: 0;
  width: 0;
  cursor: pointer;
}

.c5:checked + .c6::after {
  background: #0046FF;
}

.c5[disabled] + .c6 {
  border-color: #EBEBE8;
}

.c5:checked[disabled] + .c6 {
  border-color: #EBEBE8;
}

.c5:checked[disabled] + .c6::after {
  background: #EBEBE8;
}

.c5 + .c6::before {
  border: 1px solid #FF1900;
}

.c5:focus + .c6::before {
  border: 1px solid #0046FF;
}

.c8 {
  padding-left: 8px;
  white-space: initial;
}

<div
  className="c0"
  width="auto"
>
  <label
    className="c1 c2"
    hidden={false}
  >
    <span
      className="c3"
    >
      <div
        className="c4"
      >
        <input
          className="c5"
          name="example"
          onChange={[Function]}
          required={true}
          type="radio"
          value="green"
        />
        <div
          className="c6 c7"
        />
        <span
          className="c8 c9"
        >
          Green
        </span>
      </div>
    </span>
  </label>
  <div>
    <span
      className="c10"
    >
      <div
        className="c11"
      >
        Error: 
      </div>
      This field is required
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules | Input / Radio With Auto Focus 1`] = `
.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: auto;
  display: inline-block;
}

.c7 {
  width: 20px;
  height: 20px;
  border: 1px solid #BCBCB6;
  position: relative;
  border-radius: 50%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c7::before,
.c7::after {
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 50%;
  border-radius: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c7::before {
  width: 100%;
  height: 100%;
  padding: 2px;
}

.c7::after {
  width: 12px;
  height: 12px;
}

.c1 {
  position: relative;
}

.c1:hover .c6 {
  border-color: #4B4B46;
}

.c5 {
  position: absolute;
  opacity: 0;
  height: 0;
  width: 0;
  cursor: pointer;
}

.c5:checked + .c6::after {
  background: #0046FF;
}

.c5[disabled] + .c6 {
  border-color: #EBEBE8;
}

.c5:checked[disabled] + .c6 {
  border-color: #EBEBE8;
}

.c5:checked[disabled] + .c6::after {
  background: #EBEBE8;
}

.c5:focus + .c6::before {
  border: 1px solid #0046FF;
}

.c10:checked + .c6::after {
  background: #0046FF;
}

.c10[disabled] + .c6 {
  border-color: #EBEBE8;
}

.c10:checked[disabled] + .c6 {
  border-color: #EBEBE8;
}

.c10:checked[disabled] + .c6::after {
  background: #EBEBE8;
}

.c10 + .c6::before {
  border: 1px solid #FF1900;
}

.c10:focus + .c6::before {
  border: 1px solid #0046FF;
}

.c8 {
  padding-left: 8px;
  white-space: initial;
}

<div
  className="c0"
  width="auto"
>
  <label
    className="c1 c2"
    hidden={false}
  >
    <span
      className="c3"
    >
      <div
        className="c4"
      >
        <input
          autoFocus={true}
          className="c5"
          name="example"
          type="radio"
          value="green"
        />
        <div
          className="c6 c7"
        />
        <span
          className="c8 c9"
        >
          Green
        </span>
      </div>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules | Input / Radio With Checked Controlled Behaviour 1`] = `
Array [
  .c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: auto;
  display: inline-block;
}

.c7 {
  width: 20px;
  height: 20px;
  border: 1px solid #BCBCB6;
  position: relative;
  border-radius: 50%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c7::before,
.c7::after {
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 50%;
  border-radius: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c7::before {
  width: 100%;
  height: 100%;
  padding: 2px;
}

.c7::after {
  width: 12px;
  height: 12px;
}

.c1 {
  position: relative;
}

.c1:hover .c6 {
  border-color: #4B4B46;
}

.c5 {
  position: absolute;
  opacity: 0;
  height: 0;
  width: 0;
  cursor: pointer;
}

.c5:checked + .c6::after {
  background: #0046FF;
}

.c5[disabled] + .c6 {
  border-color: #EBEBE8;
}

.c5:checked[disabled] + .c6 {
  border-color: #EBEBE8;
}

.c5:checked[disabled] + .c6::after {
  background: #EBEBE8;
}

.c5:focus + .c6::before {
  border: 1px solid #0046FF;
}

.c8 {
  padding-left: 8px;
  white-space: initial;
}

<div
    className="c0"
    width="auto"
  >
    <label
      className="c1 c2"
      hidden={false}
    >
      <span
        className="c3"
      >
        <div
          className="c4"
        >
          <input
            checked={false}
            className="c5"
            name="example"
            onChange={[Function]}
            type="radio"
            value="green"
          />
          <div
            className="c6 c7"
          />
          <span
            className="c8 c9"
          >
            Green
          </span>
        </div>
      </span>
    </label>
  </div>,
  <button
    onClick={[Function]}
    type="button"
  >
    Toggle Checkbox
  </button>,
]
`;

exports[`Storyshots Molecules | Input / Radio With Default Checked 1`] = `
.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: auto;
  display: inline-block;
}

.c7 {
  width: 20px;
  height: 20px;
  border: 1px solid #BCBCB6;
  position: relative;
  border-radius: 50%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c7::before,
.c7::after {
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 50%;
  border-radius: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c7::before {
  width: 100%;
  height: 100%;
  padding: 2px;
}

.c7::after {
  width: 12px;
  height: 12px;
}

.c1 {
  position: relative;
}

.c1:hover .c6 {
  border-color: #4B4B46;
}

.c5 {
  position: absolute;
  opacity: 0;
  height: 0;
  width: 0;
  cursor: pointer;
}

.c5:checked + .c6::after {
  background: #0046FF;
}

.c5[disabled] + .c6 {
  border-color: #EBEBE8;
}

.c5:checked[disabled] + .c6 {
  border-color: #EBEBE8;
}

.c5:checked[disabled] + .c6::after {
  background: #EBEBE8;
}

.c5:focus + .c6::before {
  border: 1px solid #0046FF;
}

.c8 {
  padding-left: 8px;
  white-space: initial;
}

<div
  className="c0"
  width="auto"
>
  <label
    className="c1 c2"
    hidden={false}
  >
    <span
      className="c3"
    >
      <div
        className="c4"
      >
        <input
          className="c5"
          defaultChecked={true}
          name="example"
          type="radio"
          value="green"
        />
        <div
          className="c6 c7"
        />
        <span
          className="c8 c9"
        >
          Green
        </span>
      </div>
    </span>
  </label>
</div>
`;
